# mxo-launcher

./: AGENTS.md  CRASH_INVESTIGATION_SUMMARY.md  setmasterdb_analysis.md  test_d3d.cpp  test_deps.cpp  test_detailed_fixed.cpp  test_load_no_resolve.cpp  test_load_simple.cpp
code/matrix_launcher/: .gitignore  AGENTS.md  BuildSummary.md  CMakeLists.txt  Makefile  README.md  build.sh  check_feature.cpp  docs_init_sequence.md  launcher.def  launcher_correct.cpp  launcher_logged.cpp  launcher_proper.cpp  master_database.h  mxowrap.def  test_detailed.cpp  test_master_db.cpp  test_mxowrap.cpp  test_mxowrap_import.cpp  test_null_db.cpp  test_passing.cpp  test_theory1.cpp
code/matrix_launcher/include/: config.h  dll_deployer.h
code/matrix_launcher/matrixstaging/game/src/launcher/: launcher.cpp
code/matrix_launcher/matrixstaging/game/src/libltclientlogin/: launchpad.cpp  launchpad.h  loginmediator.cpp  loginmediator.h  loginstate.cpp  loginstate.h
code/matrix_launcher/src/: diagnostics.cpp  diagnostics.h  diagnostics_auth.cpp  diagnostics_auth.h  dll_deployer.c  main.cpp  resurrections.cpp
code/matrix_launcher/src/auth/: README.md  auth_crypto.cpp  auth_crypto.h
code/matrix_launcher/src/liblttcp/: cmessageconnection.cpp  cmessageconnection.h  lttcpconnection.cpp  lttcpconnection.h  ltthreadperclienttcpengine.cpp  ltthreadperclienttcpengine.h
code/matrix_launcher/src/ltlogin/: loginmediator.cpp  loginmediator.h  loginstates.cpp  loginstates.h
code/matrix_launcher/tools/: auth_probe.cpp  auth_probe.py  build_authrequest_blob.py  crashreporter_stub.cpp
(+396 files in other folders)
